--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 spring.application.name=oceandex
-spring.datasource.url={DB_URL}
-spring.datasource.username={DB_USER}
-spring.datasource.password={DB_PASS}
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+logging.level.org.hibernate.SQL=DEBUG
+spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true;
-
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.hikari.maximum-pool-size=1
